--- a/ui/admin3.ui
+++ b/ui/admin3.ui
@@ -152,6 +152,9 @@
    <property name="text">
     <string/>
    </property>
+   <property name="maxLength">
+    <number>30</number>
+   </property>
    <property name="frame">
     <bool>true</bool>
    </property>
@@ -177,6 +180,9 @@
    <property name="text">
     <string/>
    </property>
+   <property name="maxLength">
+    <number>8</number>
+   </property>
    <property name="placeholderText">
     <string>12345678</string>
    </property>
@@ -195,6 +201,9 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="maxLength">
+    <number>6</number>
    </property>
    <property name="placeholderText">
     <string>km23</string>
@@ -215,6 +224,9 @@
    <property name="text">
     <string/>
    </property>
+   <property name="maxLength">
+    <number>30</number>
+   </property>
    <property name="placeholderText">
     <string>tarasrudnyk@gmail.com</string>
    </property>
@@ -231,8 +243,11 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="inputMask">
+    <string>+38\0(00)-000-00-00</string>
+   </property>
    <property name="text">
-    <string/>
+    <string>+380()---</string>
    </property>
    <property name="placeholderText">
     <string>+380954659168</string>
@@ -310,9 +325,9 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>430</y>
-     <width>131</width>
-     <height>23</height>
+     <y>320</y>
+     <width>211</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
