--- a/ui/admin3.ui
+++ b/ui/admin3.ui
@@ -174,7 +174,7 @@
     <bool>false</bool>
    </property>
    <property name="placeholderText">
-    <string>Rudnyk Taras Petrovich</string>
+    <string>Rudnyk Taras </string>
    </property>
    <property name="clearButtonEnabled">
     <bool>true</bool>
@@ -337,13 +337,26 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>320</y>
+     <y>390</y>
      <width>211</width>
-     <height>31</height>
+     <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Back to information view</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="confirm_pushButton">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>310</y>
+     <width>211</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Confirm</string>
    </property>
   </widget>
  </widget>
