--- a/ui/admin3.ui
+++ b/ui/admin3.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>704</width>
+    <width>800</width>
     <height>483</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>704</width>
+    <width>800</width>
     <height>483</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>704</width>
+    <width>800</width>
     <height>483</height>
    </size>
   </property>
@@ -32,9 +32,9 @@
   <widget class="QPushButton" name="save_button">
    <property name="geometry">
     <rect>
-     <x>580</x>
+     <x>640</x>
      <y>20</y>
-     <width>75</width>
+     <width>130</width>
      <height>23</height>
     </rect>
    </property>
@@ -45,8 +45,8 @@
   <widget class="QLabel" name="diagnose_label">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>10</y>
+     <x>340</x>
+     <y>40</y>
      <width>61</width>
      <height>41</height>
     </rect>
@@ -58,10 +58,10 @@
   <widget class="QPushButton" name="add_new_button">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>490</x>
      <y>20</y>
-     <width>111</width>
-     <height>21</height>
+     <width>130</width>
+     <height>23</height>
     </rect>
    </property>
    <property name="text">
@@ -71,9 +71,9 @@
   <widget class="QTextEdit" name="diagnose_textEdit">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>340</x>
      <y>80</y>
-     <width>295</width>
+     <width>431</width>
      <height>61</height>
     </rect>
    </property>
@@ -84,7 +84,7 @@
   <widget class="QLabel" name="name_error">
    <property name="geometry">
     <rect>
-     <x>49</x>
+     <x>29</x>
      <y>86</y>
      <width>211</width>
      <height>16</height>
@@ -97,7 +97,7 @@
   <widget class="QLabel" name="card_number_error">
    <property name="geometry">
     <rect>
-     <x>49</x>
+     <x>29</x>
      <y>136</y>
      <width>211</width>
      <height>16</height>
@@ -110,7 +110,7 @@
   <widget class="QLabel" name="group_error">
    <property name="geometry">
     <rect>
-     <x>49</x>
+     <x>29</x>
      <y>185</y>
      <width>211</width>
      <height>16</height>
@@ -123,7 +123,7 @@
   <widget class="QLabel" name="email_error">
    <property name="geometry">
     <rect>
-     <x>49</x>
+     <x>29</x>
      <y>235</y>
      <width>211</width>
      <height>16</height>
@@ -136,7 +136,7 @@
   <widget class="QLabel" name="phone_number_error">
    <property name="geometry">
     <rect>
-     <x>49</x>
+     <x>29</x>
      <y>286</y>
      <width>211</width>
      <height>16</height>
@@ -152,7 +152,7 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>66</y>
      <width>210</width>
      <height>20</height>
@@ -162,7 +162,7 @@
     <string/>
    </property>
    <property name="text">
-    <string/>
+    <string>Rudnyk Taras</string>
    </property>
    <property name="maxLength">
     <number>30</number>
@@ -183,14 +183,14 @@
   <widget class="QLineEdit" name="card_number_lineEdit">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>117</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>12345678</string>
    </property>
    <property name="maxLength">
     <number>8</number>
@@ -205,14 +205,14 @@
   <widget class="QLineEdit" name="group_lineEdit">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>168</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>km23</string>
    </property>
    <property name="maxLength">
     <number>6</number>
@@ -227,14 +227,14 @@
   <widget class="QLineEdit" name="email_lineEdit">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>219</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>tarasrudnyk@gmail.com</string>
    </property>
    <property name="maxLength">
     <number>30</number>
@@ -249,7 +249,7 @@
   <widget class="QLineEdit" name="phone_number_lineEdit">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>270</y>
      <width>210</width>
      <height>20</height>
@@ -259,7 +259,7 @@
     <string>+38\0(00)-000-00-00</string>
    </property>
    <property name="text">
-    <string>+380()---</string>
+    <string>+380(95)-465-91-68</string>
    </property>
    <property name="placeholderText">
     <string>+380954659168</string>
@@ -271,7 +271,7 @@
   <widget class="QLabel" name="full_name_label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>50</y>
      <width>141</width>
      <height>16</height>
@@ -284,7 +284,7 @@
   <widget class="QLabel" name="card_number_label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>100</y>
      <width>121</width>
      <height>16</height>
@@ -297,7 +297,7 @@
   <widget class="QLabel" name="group_label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>150</y>
      <width>131</width>
      <height>16</height>
@@ -310,7 +310,7 @@
   <widget class="QLabel" name="email_label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>200</y>
      <width>141</width>
      <height>16</height>
@@ -323,7 +323,7 @@
   <widget class="QLabel" name="phone_number_label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>250</y>
      <width>141</width>
      <height>16</height>
@@ -336,9 +336,9 @@
   <widget class="QPushButton" name="back_to_info_view_pushButton">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>390</y>
-     <width>211</width>
+     <x>340</x>
+     <y>20</y>
+     <width>130</width>
      <height>23</height>
     </rect>
    </property>
@@ -349,7 +349,7 @@
   <widget class="QPushButton" name="confirm_pushButton">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>30</x>
      <y>310</y>
      <width>211</width>
      <height>23</height>
