Changed line edit in add_user ui.

--- a/ui/add_user.ui
+++ b/ui/add_user.ui
@@ -64,7 +64,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="first_name_label">
+  <widget class="QLabel" name="full_name_label">
    <property name="geometry">
     <rect>
      <x>19</x>
@@ -74,10 +74,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>First name*</string>
+    <string>Full name*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="first_name_lineEdit">
+  <widget class="QLineEdit" name="full_name_lineEdit">
    <property name="geometry">
     <rect>
      <x>130</x>
@@ -96,7 +96,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="last_name_label">
+  <widget class="QLabel" name="group_label">
    <property name="geometry">
     <rect>
      <x>19</x>
@@ -106,10 +106,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>Last name*</string>
+    <string>Group*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="last_name_lineEdit">
+  <widget class="QLineEdit" name="group_lineEdit">
    <property name="geometry">
     <rect>
      <x>130</x>
@@ -288,7 +288,7 @@
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QLabel" name="first_name_error">
+  <widget class="QLabel" name="full_name_error">
    <property name="geometry">
     <rect>
      <x>131</x>
@@ -314,7 +314,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="last_name_error">
+  <widget class="QLabel" name="group_error">
    <property name="geometry">
     <rect>
      <x>131</x>
@@ -366,12 +366,12 @@
     <string/>
    </property>
   </widget>
-  <zorder>last_name_lineEdit</zorder>
+  <zorder>group_lineEdit</zorder>
   <zorder>card_number_label</zorder>
   <zorder>card_number_lineEdit</zorder>
-  <zorder>first_name_label</zorder>
-  <zorder>first_name_lineEdit</zorder>
-  <zorder>last_name_label</zorder>
+  <zorder>full_name_label</zorder>
+  <zorder>full_name_lineEdit</zorder>
+  <zorder>group_label</zorder>
   <zorder>username_label</zorder>
   <zorder>username_lineEdit</zorder>
   <zorder>password_label</zorder>
@@ -382,9 +382,9 @@
   <zorder>phone_number_lineEdit</zorder>
   <zorder>phone_number_label</zorder>
   <zorder>card_number_error</zorder>
-  <zorder>first_name_error</zorder>
+  <zorder>full_name_error</zorder>
   <zorder>phone_number_error</zorder>
-  <zorder>last_name_error</zorder>
+  <zorder>group_error</zorder>
   <zorder>username_error</zorder>
   <zorder>password_error</zorder>
   <zorder>email_error</zorder>
