--- a/ui/admin3.ui
+++ b/ui/admin3.ui
@@ -42,19 +42,6 @@
     <string>Save</string>
    </property>
   </widget>
-  <widget class="QLabel" name="diagnose_label">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>40</y>
-     <width>61</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Diagnoses:</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="add_new_button">
    <property name="geometry">
     <rect>
@@ -66,19 +53,6 @@
    </property>
    <property name="text">
     <string>Add new</string>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="diagnose_textEdit">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>101</y>
-     <width>431</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="placeholderText">
-    <string>please write diagnose here.</string>
    </property>
   </widget>
   <widget class="QLabel" name="name_error">
@@ -359,17 +333,72 @@
     <string>Confirm</string>
    </property>
   </widget>
-  <widget class="QLabel" name="diagnose_1_label">
+  <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>80</y>
-     <width>71</width>
-     <height>16</height>
+     <y>90</y>
+     <width>431</width>
+     <height>381</height>
+    </rect>
+   </property>
+   <property name="sortingEnabled">
+    <bool>true</bool>
+   </property>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>38</number>
+   </attribute>
+   <attribute name="horizontalHeaderStretchLastSection">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>30</number>
+   </attribute>
+   <row>
+    <property name="text">
+     <string/>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string/>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string/>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string/>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string>№</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Diagnose</string>
+    </property>
+   </column>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>60</y>
+     <width>101</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Diagnose №1:</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Diagnoses:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
  </widget>
