--- a/ui/user.ui
+++ b/ui/user.ui
@@ -69,6 +69,9 @@
       <property name="autoScroll">
        <bool>false</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="defaultDropAction">
        <enum>Qt::IgnoreAction</enum>
       </property>
