--- a/ui/admin2.ui
+++ b/ui/admin2.ui
@@ -82,7 +82,7 @@
     <item row="3" column="1">
      <widget class="QPushButton" name="delete_selected_pushButton">
       <property name="enabled">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
       <property name="text">
        <string>Delete selected users</string>
